--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "dev": "concurrently \"npm start\" \"npm run watch:sass\"",
     "build": "react-scripts build",
@@ -51,6 +53,7 @@
     "autoprefixer": "^10.4.1",
     "concat": "^1.0.3",
     "concurrently": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^9.1.0"
