--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "emailjs-com": "^3.2.0",
+    "lottie-react": "^2.1.0",
     "lottie-web": "^5.8.1",
     "postcss-scss": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-google-recaptcha": "^2.1.0",
     "react-parallax-tilt": "^1.5.84",
     "react-router": "^6.2.1",
